--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "@deaccountsystems/resolution",
+  "name": "denames",
   "version": "3.0.0",
-  "description": "Domain Resolution for blockchain domains",
+  "description": "Domain Resolution for blockchain accounts and domains",
   "main": "./build/index.js",
   "directories": {
     "doc": "docs"
   },
   "types": "./build/index.d.ts",
-  "bin": {
-    "resolution": "./build/cli/cli.js"
-  },
   "scripts": {
     "release": "RELEASE=patch yarn release:run",
     "release:minor": "RELEASE=minor yarn release:run",
@@ -26,10 +23,9 @@
     "start": "npm run build:live",
     "dev": "yarn build && ./build/cli/cli.js -d brad.crypto",
     "build": "rm -rf build && tsc -p . && chmod +x ./build/cli/cli.js",
-    "build:symlink": "yarn build && ln -sf $PWD/build/cli/cli.js  /usr/local/bin/resolution",
     "build:live": "nodemon --watch 'src/**/*.ts' --exec yarn build",
     "docs": "yarn docs:clone && yarn docs:generate && yarn docs:readme",
-    "docs:clone": "([ -d ./docs ] || git clone --branch gh-pages git@github.com:deaccountsystems/resolution.git docs) && git -C ./docs pull",
+    "docs:clone": "([ -d ./docs ] || git clone --branch gh-pages git@github.com:zgayjjf/denames.git docs) && git -C ./docs pull",
     "docs:generate": "yarn run typedoc --out \"./docs/v$npm_package_version\"",
     "docs:readme": "./docs-readme.sh",
     "docs:deploy": "yarn docs && ./deploy-docs.sh",
@@ -46,9 +42,12 @@
   "author": "JohnnyJumper <https://github.com/JohnnyJumper>, Bogdan Gusiev <https://github.com/bogdan>, Braden Pezeshki <https://github.com/perfect-cents, Vladyslav Batyrenko <https://github.com/mvlabat>, Matthew Gould <https://github.com/theporpoise>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/DeAccountSystems/resolution.git"
+    "url": "https://github.com/zgayjjf/denames.git"
   },
   "keywords": [
+    "denames",
+    "das",
+    ".bit",
     "cns",
     ".crypto",
     "zns",
@@ -63,9 +62,9 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/DeAccountSystems/resolution.git"
+    "url": "https://github.com/zgayjjf/denames.git"
   },
-  "homepage": "https://github.com/DeAccountSystems/resolution.git#readme",
+  "homepage": "https://github.com/zgayjjf/denames.git#readme",
   "optionalDependencies": {
     "dotenv": "^8.2.0"
   },
@@ -108,6 +107,7 @@
     "bn.js": "^4.4.0",
     "commander": "^4.1.1",
     "content-hash": "^2.5.2",
+    "das-sdk": "^0.0.3",
     "ethereum-ens-network-map": "^1.0.2",
     "js-sha256": "^0.9.0",
     "js-sha3": "^0.8.0",
