--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
   },
   "homepage": "https://github.com/DeAccountSystems/denames.git",
   "devDependencies": {
-    "@ensdomains/address-encoder": "0.2.6",
     "@ethersproject/providers": "^5.0.2",
     "@types/bn.js": "^4.11.6",
     "@types/elliptic": "^6.4.13",
@@ -82,8 +81,6 @@
     "@unstoppabledomains/sizecheck": "^4.0.0",
     "@zilliqa-js/core": "2.3.0-alpha.0",
     "audit-ci": "^3.1.1",
-    "bip44-constants": "^8.0.5",
-    "content-hash": "^2.5.2",
     "dotenv": "^8.2.0",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^8.3.0",
@@ -116,7 +113,10 @@
     "ethereum-ens-network-map": "^1.0.2",
     "js-sha256": "^0.9.0",
     "js-sha3": "^0.8.0",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "@ensdomains/address-encoder": "0.2.6",
+    "bip44-constants": "^8.0.5",
+    "content-hash": "^2.5.2"
   },
   "lint-staged": {
     "src/**/*.ts": "eslint --fix",
