--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build:symlink": "yarn build && ln -sf $PWD/build/cli/cli.js  /usr/local/bin/denames",
     "build:live": "nodemon --watch 'src/**/*.ts' --exec yarn build",
     "docs": "yarn docs:clone && yarn docs:generate && yarn docs:readme",
-    "docs:clone": "([ -d ./docs ] || git clone --branch gh-pages git@github.com:DeAccountSystems/denames.git docs) && git -C ./docs pull",
+    "docs:clone": "([ -d ./docs ] || git clone --branch gh-pages git@github.com:dotbitHQ/denames.git docs) && git -C ./docs pull",
     "docs:generate": "yarn run typedoc --out \"./docs/v$npm_package_version\"",
     "docs:readme": "./docs-readme.sh",
     "docs:deploy": "yarn docs && ./deploy-docs.sh",
@@ -43,10 +43,10 @@
   "files": [
     "build"
   ],
-  "author": "JohnnyJumper <https://github.com/JohnnyJumper>, Bogdan Gusiev <https://github.com/bogdan>, Braden Pezeshki <https://github.com/perfect-cents, Vladyslav Batyrenko <https://github.com/mvlabat>, Matthew Gould <https://github.com/theporpoise>",
+  "author": "Jeff Jing <httpgs://github.com/zgayjjf> JohnnyJumper <https://github.com/JohnnyJumper>, Bogdan Gusiev <https://github.com/bogdan>, Braden Pezeshki <https://github.com/perfect-cents, Vladyslav Batyrenko <https://github.com/mvlabat>, Matthew Gould <https://github.com/theporpoise>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/DeAccountSystems/denames.git"
+    "url": "https://github.com/dotbitHQ/denames.git"
   },
   "keywords": [
     "das",
@@ -65,9 +65,9 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/DeAccountSystems/denames.git"
+    "url": "https://github.com/dotbitHQ/denames.git"
   },
-  "homepage": "https://github.com/DeAccountSystems/denames.git",
+  "homepage": "https://github.com/dotbitHQ/denames.git",
   "devDependencies": {
     "@ethersproject/providers": "^5.0.2",
     "@types/bn.js": "^4.11.6",
