--- a/package.json
+++ b/package.json
@@ -45,11 +45,19 @@
     "url": "https://github.com/dotbitHQ/denames/issues"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.19.1",
     "@types/jest": "^28.1.2",
     "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
     "eslint": "8.22.0",
     "eslint-config-blockabc": "^0.15.2",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-standard": "^5.0.0",
     "jest": "^28.1.1",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.1",
@@ -61,6 +69,7 @@
     "@ensdomains/ens-contracts": "^0.0.15",
     "@ensdomains/ensjs": "^2.1.0",
     "@ethersproject/providers": "^5.7.2",
+    "@siddomains/sidjs": "^0.1.17",
     "bignumber.js": "^9.1.1",
     "dotbit": "^0.4.13",
     "ethers": "^5.7.2",
