--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
   },
   "dependencies": {
     "@ensdomains/ensjs": "^2.1.0",
-    "dotbit": "^0.4.13"
+    "@ethersproject/providers": "^5.7.2",
+    "dotbit": "^0.4.13",
+    "ethers": "^5.7.2"
   }
 }
