--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@types/jest": "^28.1.2",
     "@types/node": "^18.0.0",
+    "eslint": "8.22.0",
     "eslint-config-blockabc": "^0.15.2",
     "eslint-plugin-n": "^15.3.0",
     "jest": "^28.1.1",
