--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "vite": "^2.9.14"
   },
   "dependencies": {
+    "@ensdomains/ens-contracts": "^0.0.15",
     "@ensdomains/ensjs": "^2.1.0",
     "@ethersproject/providers": "^5.7.2",
+    "@siddomains/sidjs": "^0.1.17",
     "@unstoppabledomains/resolution": "^8.3.3",
     "dotbit": "^0.4.13",
     "ethers": "^5.7.2"
