--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "vite": "^2.9.14"
   },
   "dependencies": {
+    "@bonfida/spl-name-service": "0.1.51",
+    "@solana/web3.js": "1.67.0",
     "@ensdomains/ens-contracts": "^0.0.15",
     "@ensdomains/ensjs": "^2.1.0",
     "@ethersproject/providers": "^5.7.2",
