chore: add lint commands

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "build:commonjs": "tsc -p tsconfig.build.json",
     "build:esm": "tsc -p tsconfig.build.esm.json",
     "dev:browser": "npm run build && vite ./example/browser",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "lint": "eslint \"{src,example,packages,scripts,tests}/**/*.ts\"",
+    "lint:fix": "eslint \"{src,example,packages,scripts,tests}/**/*.ts\" --fix"
   },
   "keywords": [
     "dotbit",
