--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "target": "es6",
     "sourceMap": true,
     "allowJs": true,
+    "strictNullChecks": true,
     "baseUrl": "./",
     "outDir": "./lib",
     "paths": {}
