--- a/package.json
+++ b/package.json
@@ -48,13 +48,13 @@
     "url": "https://github.com/dotbitHQ/AllDID/issues"
   },
   "devDependencies": {
+    "@jest/globals": "^29.4.1",
     "@types/jest": "^28.1.2",
     "@types/node": "^18.0.0",
     "eslint": "8.22.0",
     "eslint-config-blockabc": "^0.15.2",
     "eslint-plugin-n": "^15.3.0",
     "jest": "^28.1.1",
-    "ts-jest": "^28.0.5",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4",
     "vite": "^2.9.14"
@@ -69,6 +69,8 @@
     "@unstoppabledomains/resolution": "^8.3.3",
     "cross-fetch": "^3.1.5",
     "dotbit": "^0.4.13",
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "pns-sdk": "^0.8.0",
+    "sns-app-contract-api": "^1.1.25"
   }
 }
