--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-config-blockabc": "^0.15.2",
     "eslint-plugin-n": "^15.3.0",
     "jest": "^28.1.1",
+    "ts-jest": "^28.0.5",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4",
     "vite": "^2.9.14"
