--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,6 +1,9 @@
 {
   "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "strictNullChecks": false
+  },
   "include": [
-    "src",
+    "src"
   ],
 }
