--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,10 @@
     "strictNullChecks": true,
     "baseUrl": "./",
     "outDir": "./lib",
-    "paths": {},
+    "paths": {
+      "alldid": ["src"],
+      "alldid/*": ["src/*"],
+    },
     "skipLibCheck": true
   },
 
